--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Hello, world!</title>
+        <title>count!</title>
     </head>
     <body>
         <h1>Hello, world!</h1>
