--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
                 
             </section>
-            <a href="https://discord.gg/ugkDfhDB"><img style="display: block; margin-left: auto; margin-right: auto; width:50%" src="coins.png"></a>
+            <a href="https://discord.gg/ugkDfhDB"><img style="display: block; margin-left: auto; margin-right: auto; width:50%" src="https://media.discordapp.net/attachments/832979009226145813/1155269122217746452/coins.png"></a>
             <p style="text-align: center;">Have you ever seen one of those nice coins that officers of the military give to civillians? Are you jealous??? Because I would be! But now you dont have to, I am now offering CUSTOM challenge coins JUST for you! Join the <a href="https://discord.gg/ugkDfhDB">discord server</a> for more information!!!</p>
         </main>
     </body>
