--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
         <main>
             <section>
-                <h2>about me</h2>
+                <h2>DESCRIPTION</h2>
                 <p>you might know me as the "admin game guy" that all my friends would play
                     I dont really play roblox anymore and I dont develop admin game anymore.
                     luckily though I do lots of other things :)</p>
