--- a/index.html
+++ b/index.html
@@ -2,36 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="description" content='you might know me as the "admin game guy" that all my friends would play
-        I dont really play roblox anymore and I dont develop admin game anymore.
-        luckily though I do lots of other things :)'>
+        <meta name="description" content='Quality products.'>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>rumfel3's website</title>
+        <title>Rumfel3 | Quality products. Anytime.</title>
         <link rel="stylesheet" href="/main.css">
     </head>
     <body>
-        <main>
-            <section>
-                <h2>DESCRIPTION</h2>
-                <p>you might know me as the "admin game guy" that all my friends would play
-                    I dont really play roblox anymore and I dont develop admin game anymore.
-                    luckily though I do lots of other things :)</p>
-                <summary id="timeZone">my time zone is kwaj time</summary>
-                <script>
-                    setInterval(function() {
-                        var now = new Date();
-                        var Time = new Date(now.toLocaleString("en-US", {timeZone: "Pacific/Kwajalein"}));
-                        document.getElementById("timeZone").innerHTML = "my time zone is kwaj time (" + Time.toLocaleString() + ")";
-                    }, 1000)
-                </script>
-                <p>here are some links to my other things</p>
-                <a class="btn" href="https://www.youtube.com/@rumfel3">youtube</a>
-                <a class="btn" href="https://www.roblox.com/users/970461465/profile">roblox</a>
-
-                
-            </section>
-            <a href="https://discord.gg/ugkDfhDB"><img style="display: block; margin-left: auto; margin-right: auto; width:50%" src="https://media.discordapp.net/attachments/832979009226145813/1155269122217746452/coins.png"></a>
-            <p style="text-align: center;">Have you ever seen one of those nice coins that officers of the military give to civillians? Are you jealous??? Because I would be! But now you dont have to, I am now offering CUSTOM challenge coins JUST for you! Join the <a href="https://discord.gg/ugkDfhDB">discord server</a> for more information!!!</p>
-        </main>
     </body>
 </html>
