--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
         <meta charset="UTF-8">
         <meta name="description" content='Quality products.'>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" href="icon.ico" type="image/x-icon">
         <title>Rumfel3 | Quality products. Anytime.</title>
         <link rel="stylesheet" href="/main.css">
     </head>
     <body>
+        <div class="backgroundimage border" style="left: -1%;"></div>
+        <h1 class="centered" style="margin-top: 0.4%;">QUALITY COINS; IN THE CLICK OF A BUTTON, DELIVERED TO YOU. BUY TODAY.</h1>
+        <h1 class="centered largetext font1" style="margin-top: 14%;">WE VALUE <b>QUALITY</b> PRODUCTS.</h1>
+
+        <b class="largetext centered" style="margin-top: 20%; position: absolute; left: 45%;">ABOUT US</b>
+
+        <hr class="custom-hr" style="margin-top: 335px;">
+        
+        
+
     </body>
 </html>
